--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "angular": "^1.6.8",
     "angular-animate": "^1.6.8",
+    "angular-cookies": "^1.6.8",
     "angular-ui-bootstrap": "^2.5.6",
     "angular-ui-router": "1.0.0-beta.3",
     "bootstrap-sass": "^3.3.7",
