--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "angular-ui-bootstrap": "^2.5.6",
     "angular-ui-router": "1.0.0-beta.3",
     "bootstrap-sass": "^3.3.7",
+    "bufferutil": "^3.0.3",
     "file-loader": "^1.1.6",
-    "url-loader": "^0.6.2"
+    "u": "^0.1.0",
+    "url-loader": "^0.6.2",
+    "utf-8-validate": "^4.0.0"
   },
   "devDependencies": {
     "@types/angular": "^1.6.6",
