--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
     "angular": "^1.6.8",
     "angular-animate": "^1.6.8",
     "angular-cookies": "^1.6.8",
+    "angular-google-maps": "^2.4.1",
+    "angular-simple-logger": "^0.1.7",
     "angular-ui-bootstrap": "^2.5.6",
     "angular-ui-router": "1.0.0-beta.3",
     "bootstrap-sass": "^3.3.7",
     "bufferutil": "^3.0.3",
     "file-loader": "^1.1.6",
+    "jquery": "^3.3.1",
+    "lodash": "^4.17.5",
     "u": "^0.1.0",
     "url-loader": "^0.6.2",
-    "utf-8-validate": "^4.0.0"
+    "utf-8-validate": "^4.0.0",
+    "wb-google-addresspicker": "^1.0.2"
   },
   "devDependencies": {
     "@types/angular": "^1.6.6",
